--- a/css/Complain.css
+++ b/css/Complain.css
@@ -32,3 +32,11 @@ body{
 .btn-sm{
     background-color: red;
 }
+@media only screen and (max-width:557px){
+    .table{
+        margin-left: -30px;
+    }
+    #clear{
+        margin-top: 16px;
+    }
+}
